--- a/orders/templates/orders/order-create.html
+++ b/orders/templates/orders/order-create.html
@@ -23,12 +23,12 @@
                                     <h6 class="my-0">{{ basket.product.name }}</h6>
                                     <small class="text-muted">{{ basket.quantity }} шт.</small>
                                 </div>
-                                <span class="text-muted">{{ basket.sum|intcomma }} руб.</span>
+                                <span class="text-muted">{{ basket.sum|intcomma }} тг.</span>
                             </li>
                         {% endfor %}
                         <li class="list-group-item d-flex justify-content-between">
                             <span>Сумма к оплате</span>
-                            <strong>{{ baskets.total_sum|intcomma }} руб.</strong>
+                            <strong>{{ baskets.total_sum|intcomma }} тг.</strong>
                         </li>
                     </ul>
                 </div>
