--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -23,13 +23,13 @@
                                     {{ purchased_item.product_name }}
                                 </th>
                                 <td>{{ purchased_item.quantity }}</td>
-                                <td>{{ purchased_item.price|intcomma }} руб.</td>
-                                <td>{{ purchased_item.sum|intcomma }} руб.</td>
+                                <td>{{ purchased_item.price|intcomma }} тг.</td>
+                                <td>{{ purchased_item.sum|intcomma }} тг.</td>
                             </tr>
                         {% endfor %}
                         </tbody>
                     </table>
-                    <p class="float-right h4 mt-3">Итого {{ object.basket_history.total_sum|intcomma }} руб.</p>
+                    <p class="float-right h4 mt-3">Итого {{ object.basket_history.total_sum|intcomma }} тг.</p>
                 </div>
             </div>
         </div>
